--- a/Day1/01.md
+++ b/Day1/01.md
@@ -1,1 +1,88 @@
+### 🌱 **What is Terraform?**
+
+Terraform is an open-source Infrastructure as Code (IaC) tool by HashiCorp that lets you **define and provision cloud infrastructure** using a declarative configuration language called **HCL (HashiCorp Configuration Language)**.
+
+---
+
+### ✅ **Basic Concepts**
+
+| Concept          | Description                                                                |
+| ---------------- | -------------------------------------------------------------------------- |
+| **Providers**    | Plugins to interact with APIs (e.g., AWS, Azure, GCP, VMware, etc.)        |
+| **Resources**    | Infrastructure components (VMs, networks, storage, etc.)                   |
+| **Variables**    | Input values to make your configs reusable                                 |
+| **State**        | Tracks deployed infrastructure (terraform.tfstate)                         |
+| **Plan & Apply** | `terraform plan` shows what will change, `terraform apply` makes it happen |
+
+---
+
+### 📦 **Install Terraform**
+
+* Go to: [https://www.terraform.io/downloads](https://www.terraform.io/downloads)
+* Install it based on your OS.
+* Verify:
+
+  ```bash
+  terraform -v
+  ```
+
+---
+
+### 🛠️ **Your First Terraform Project**
+
+1. **Create a folder**:
+
+   ```bash
+   mkdir terraform-demo && cd terraform-demo
+   ```
+
+2. **Create a main config file**:
+   `main.tf`
+
+   ```hcl
+   provider "aws" {
+     region = "us-east-1"
+   }
+
+   resource "aws_s3_bucket" "demo_bucket" {
+     bucket = "my-unique-demo-bucket-12345"
+     acl    = "private"
+   }
+   ```
+
+3. **Initialize the project**:
+
+   ```bash
+   terraform init
+   ```
+
+4. **Preview what will happen**:
+
+   ```bash
+   terraform plan
+   ```
+
+5. **Apply the changes**:
+
+   ```bash
+   terraform apply
+   ```
+
+6. **Destroy the infrastructure** (cleanup):
+
+   ```bash
+   terraform destroy
+   ```
+
+---
+
+### 🧠 Tips for Beginners
+
+* Use `.tf` files to define infrastructure.
+* Use `terraform fmt` to format code.
+* Never edit `terraform.tfstate` manually.
+* Use `.tfvars` files for reusable variables.
+* Keep Terraform state files secure (especially if using cloud backends like S3).
+
+---
 
